Conversion en webp

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                 </div>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="./assets/images/slider/person-walking-photo.jpg" class="d-block w-100" alt="Photo d'une personne de dos qui marche">
+                        <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo d'une personne de dos qui marche">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/images/slider/festival-photo.jpg" class="d-block w-100" alt="Photo de la foule à un festival">
+                        <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo de la foule à un festival">
                     </div>
                     <div class="carousel-item">
-                        <img src="./assets/images/slider/wedding-photo.jpg" class="d-block w-100" alt="Photo de mariés qui dansent">
+                        <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo de mariés qui dansent">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -57,7 +57,7 @@
         </div>
         <div id="about">
             <div class="picture left">
-                <img src="./assets/images/nina-portrait-photo.png" alt="portrait de Nina Carducci">
+                <img src="./assets/images/nina-portrait-photo.webp" alt="portrait de Nina Carducci">
             </div>
             <div id="about-me">
                 <h3 class="about-me__title">A propos de moi</h3>
@@ -70,15 +70,15 @@
             <h3 class="title">Portfolio</h3>
             <div class="container py-3">
                 <div class="gallery" style="display: none">
-                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.jpg" alt="photo d'un concert vu depuis la foule">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/businessman-photo.jpg" alt="photo d'un homme d'affaire les bras croisés">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/smiling-employees-photo.jpg" alt="photo de deux femmes qui semblent être en réunion">
-                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hands-of-bride-and-groom-photo.jpg" alt="photo des mains des mariés">
-                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/man-portrait-photo.jpg" alt="photo d'un homme qui ferme les yeux">
-                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/bride-and-groom-photo.jpg" alt="photo des mariés devant un palmier">
-                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/woman-portrait-photo.jpg" alt="photo d'une femme à travers un grillage">
-                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-singer-photo.jpg" alt="photo du chanteur lors d'un concert">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/woman-with-computer-photo.jpg" alt="photo d'une femme qui travaille sur ordinateur et qui rit">
+                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.webp" alt="photo d'un concert vu depuis la foule">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/businessman-photo.webp" alt="photo d'un homme d'affaire les bras croisés">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/smiling-employees-photo.webp" alt="photo de deux femmes qui semblent être en réunion">
+                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hands-of-bride-and-groom-photo.webp" alt="photo des mains des mariés">
+                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/man-portrait-photo.webp" alt="photo d'un homme qui ferme les yeux">
+                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/bride-and-groom-photo.webp" alt="photo des mariés devant un palmier">
+                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/woman-portrait-photo.webp" alt="photo d'une femme à travers un grillage">
+                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-singer-photo.webp" alt="photo du chanteur lors d'un concert">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/woman-with-computer-photo.webp" alt="photo d'une femme qui travaille sur ordinateur et qui rit">
                 </div>
             </div>
             <div class="quote">
@@ -150,7 +150,7 @@
                     </form>
                 </div>
                 <div class="picture right">
-                    <img src="./assets/images/camera-photo.png" alt="photo d'un appareil photo">
+                    <img src="./assets/images/camera-photo.webp" alt="photo d'un appareil photo">
                 </div>
             </div>
         </div>
