--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
-        <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+        <script src="./assets/bootstrap/bootstrap.bundle.js" async></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="./assets/maugallery.js"></script>
-        <script src="./assets/scripts.js"></script>
+        <script src="./assets/maugallery.js" async></script>
+        <script src="./assets/scripts.js" async></script>
     </head>
     <body>
         <div class="top-header">
@@ -138,7 +138,7 @@
             <div class="container">
                 <div class="form-container">
                     <h3>Une question ? Une demande de devis ?</h3>
-                    <p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
+                    <p> N’hésitez pas à m’écrire ! Je réponds en moins de 24 heures</p>
                     <form action="" method="post">
                         <label>Nom</label>
                         <input type="text" name="nom" id="nom">
