--- a/index.html
+++ b/index.html
@@ -1,17 +1,77 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-        <link rel="stylesheet" href="./assets/style.css">
-        <link rel="preconnect" href="https://fonts.googleapis.com">
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
         <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <meta name="description" content="Photographe à Bordeaux et mobile en Île-de-France, je réalise shootings, retouches et albums photos afin d'immortaliser ce qui compte pour vous et vous permettre de revivre un moment, une émotion...">
+
+        <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+            <link rel="stylesheet" href="./assets/style.css">
+            <link rel="preconnect" href="https://fonts.googleapis.com">
+            <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+            <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
+        
         <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-        <script src="./assets/maugallery.js"></script>
-        <script src="./assets/scripts.js"></script>
+            <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+            <script src="./assets/maugallery.js" async></script>
+            <script src="./assets/scripts.js" async></script>
+            <script type="application/ld+json">
+                {
+                    "@context": "https://schema.org",
+                    "@type": "Person",
+                    "name": "Nina Carducci",
+                    "telephone": "05.56.67.78.89",
+                    "address": {
+                        "@type": "PostalAddress",
+                        "addressLocality": "Bordeaux",
+                        "postalCode": "33200",
+                        "streetAddress": "68 avenue Alsace-Lorraine"
+                    },
+                    "image": "./assets/images/nina-portrait-photo.webp",
+                    "jobTitle": "Photographe",
+                    "sameAs": "https://www.instagram.com/ninacarducci.photo/?hl=fr",
+                    "makesOffer" : [
+                        {
+                            "@type" :"Offer",
+                            "priceSpecification" : {
+                                "@type" : "UnitPriceSpecification",
+                                "priceCurrency" : "EUR",
+                                "price" : "350" },
+                            "itemOffered" : {
+                                "@type" : "Service",
+                                "name" : "Shooting photo",
+                                "description" : "Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos. Le prix est à la demi-journée et inclut le matériel et le déplacement."
+                            }
+                        },
+                        {
+                            "@type" :"Offer",
+                            "priceSpecification" : {
+                                "@type" : "UnitPriceSpecification",
+                                "priceCurrency" : "EUR",
+                                "price" : "50" },
+                            "itemOffered" : {
+                                "@type" : "Service",
+                                "name" : "Retouches photo",
+                                "description" : "Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficiez d’un rendu optimal pour vos publications. Le prix est pour une photo et comprend 2 AR."
+                            }
+                        },
+                        {
+                            "@type" :"Offer",
+                            "priceSpecification" : {
+                                "@type" : "UnitPriceSpecification",
+                                "priceCurrency" : "EUR",
+                                "price" : "400" },
+                            "itemOffered" : {
+                                "@type" : "Service",
+                                "name" : "Album photo",
+                                "description" : "Partagez avec vos proches et vos clients les photos des moments passés ensemble à travers un album photo personnalisé. Le prix est pour un album A4 contenant 30 pages recto-verso."
+                            }
+                        }
+                    ]
+                }
+            </script>
+        
+        <title>Nina Carducci - Photographe</title>
     </head>
     <body>
         <div class="top-header">
@@ -107,7 +167,7 @@
                 <div class="service">
                     <div class="service__description">
                         <h3>Retouches</h3>
-                        <p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficier d’un rendu optimal pour vos publications</p>
+                        <p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficiez d’un rendu optimal pour vos publications</p>
                     </div>
                     <div class="service__price">
                         <h4>50€/photo</h4>
@@ -117,11 +177,11 @@
                 <div class="service">
                     <div class="service__description">
                         <h3>Album photos</h3>
-                        <p>Partagez avec vos proches et vos clients les photos des moments partagés ensemble à travers un album photo personnalisé</p>
+                        <p>Partagez avec vos proches et vos clients les photos des moments passés ensemble à travers un album photo personnalisé</p>
                     </div>
                     <div class="service__price">
                         <h4>400€ album A4</h4>
-                        <span>30 pages recto/verso</span>
+                        <span>30 pages recto-verso</span>
                     </div>
                 </div>
             </div>
