--- a/index.html
+++ b/index.html
@@ -74,60 +74,72 @@
         <title>Nina Carducci - Photographe</title>
     </head>
     <body>
-        <div class="top-header">
-            <h3 class="name">Nina Carducci</h3>
-            <div class="nav">   
+        <header>
+            <h1 class="name">Nina Carducci</h1>
+            <nav>   
                 <ul>
-                    <li><a href="#about">À propos</a></li>
-                    <li><a href="#gallery">Galerie</a></li>
-                    <li><a href="#services">Service</a></li>
-                    <li><a href="#contact">Contact</a></li>
-                    <li><a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank"><img src="assets/images/instagram.png" alt="icône du site Instagram"></a></li>
+                    <li>
+                        <a href="#about">À propos</a>
+                    </li>
+                    <li>
+                        <a href="#gallery">Galerie</a>
+                    </li>
+                    <li>
+                        <a href="#services">Service</a>
+                    </li>
+                    <li>
+                        <a href="#contact">Contact</a>
+                    </li>
+                    <li>
+                        <a class="social-link" href="https://www.instagram.com/ninacarducci.photo/?hl=fr" target="_blank">
+                            <img src="assets/images/instagram.png" alt="icône du site Instagram">
+                        </a>
+                    </li>
                 </ul>
-            </div>
-        </div>
-        <div id="header">
+            </nav>
+        </header>
 
-            <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-                <div class="carousel-indicators">
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-                    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-                </div>
-                <div class="carousel-inner">
-                    <div class="carousel-item active">
-                        <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo d'une personne de dos qui marche">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo de la foule à un festival">
-                    </div>
-                    <div class="carousel-item">
-                        <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo de mariés qui dansent">
-                    </div>
-                </div>
-                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Previous</span>
-                </button>
-                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                    <span class="visually-hidden">Next</span>
-                </button>
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
             </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo d'une personne de dos qui marche">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo de la foule à un festival">
+                </div>
+                <div class="carousel-item">
+                    <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo de mariés qui dansent">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
         </div>
+
         <div id="about">
             <div class="picture left">
                 <img src="./assets/images/nina-portrait-photo.webp" alt="portrait de Nina Carducci">
             </div>
             <div id="about-me">
-                <h3 class="about-me__title">A propos de moi</h3>
-                <h6 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestinée. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h6>
+                <h2 class="about-me__title">A propos de moi</h2>
+                <h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestinée. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
                 <p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
-                    C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de la lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
+                C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de la lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
             </div>
         </div>
+
         <div id="gallery">
-            <h3 class="title">Portfolio</h3>
+            <h2 class="title">Portfolio</h2>
             <div class="container py-3">
                 <div class="gallery" style="display: none">
                     <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.webp" alt="photo d'un concert vu depuis la foule">
@@ -141,17 +153,19 @@
                     <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/woman-with-computer-photo.webp" alt="photo d'une femme qui travaille sur ordinateur et qui rit">
                 </div>
             </div>
+
             <div class="quote">
                 <figure>
                     <blockquote>
-                        <h1 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h1>
+                        <h2 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h2>
                     </blockquote>
                     <figcaption class="quote__author">- Richard Avedon</figcaption>
                 </figure>
             </div>
         </div>
+
         <div id="services">
-            <h3 class="title">Mes services</h3>
+            <h2 class="title">Mes services</h2>
             <div class="container">
                 <div class="service">
                     <div class="service__description">
@@ -162,8 +176,8 @@
                         <h4>350€/demi journée</h4>
                         <span>Matériel, déplacement inclus</span>
                     </div>
-
                 </div>
+
                 <div class="service">
                     <div class="service__description">
                         <h3>Retouches</h3>
@@ -174,6 +188,7 @@
                         <span>2 AR par photo</span>
                     </div>
                 </div>
+
                 <div class="service">
                     <div class="service__description">
                         <h3>Album photos</h3>
@@ -186,29 +201,32 @@
                 </div>
             </div>
         </div>
+
         <div class="quote">
             <figure>
                 <blockquote>
-                    <h1 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h1>
+                    <h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
                 </blockquote>
                 <figcaption class="quote__author">- Richard Avedon</figcaption>
             </figure>
         </div>
+
         <div id="contact">
             <div class="container">
                 <div class="form-container">
-                    <h3>Une question ? Une demande de devis ?</h3>
+                    <h2>Une question ? Une demande de devis ?</h2>
                     <p> N’hésitez pas à m’écrire ! Je réponds en moins de 24 heures</p>
-                    <form action="" method="post">
-                        <label>Nom</label>
+                    <form action="#" method="post">
+                        <label for="nom">Nom</label>
                         <input type="text" name="nom" id="nom">
-                        <label>Email</label>
+                        <label for="email">Email</label>
                         <input type="email" name="email" id="email">
-                        <label>Message</label>
+                        <label for="message">Message</label>
                         <textarea name="message" id="message" cols="30" rows="10"></textarea>
-                        <input type="submit" value="Envoyer"/>
+                        <input type="submit" value="Envoyer">
                     </form>
                 </div>
+
                 <div class="picture right">
                     <img src="./assets/images/camera-photo.webp" alt="photo d'un appareil photo">
                 </div>
