--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                         <a href="#gallery">Galerie</a>
                     </li>
                     <li>
-                        <a href="#services">Service</a>
+                        <a href="#services">Services</a>
                     </li>
                     <li>
                         <a href="#contact">Contact</a>
@@ -107,13 +107,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo d'une personne de dos qui marche">
+                    <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo de la foule à un festival">
+                    <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo en immersion du public à un festival">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo de mariés qui dansent">
+                    <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo du marié qui embrasse la mariée">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -131,24 +131,24 @@
                 <img src="./assets/images/nina-portrait-photo.webp" alt="portrait de Nina Carducci">
             </div>
             <div id="about-me">
-                <h2 class="about-me__title">A propos de moi</h2>
+                <h2 class="about-me__title">La photographie et moi</h2>
                 <h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestinée. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
                 <p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
                 C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de la lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
             </div>
         </div>
 
-        <div id="gallery">
-            <h2 class="title">Portfolio</h2>
+        <section id="gallery">
+            <h2 class="title">Mon portfolio</h2>
             <div class="container py-3">
                 <div class="gallery" style="display: none">
-                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.webp" alt="photo d'un concert vu depuis la foule">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/businessman-photo.webp" alt="photo d'un homme d'affaire les bras croisés">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/smiling-employees-photo.webp" alt="photo de deux femmes qui semblent être en réunion">
-                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hands-of-bride-and-groom-photo.webp" alt="photo des mains des mariés">
-                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/man-portrait-photo.webp" alt="photo d'un homme qui ferme les yeux">
-                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/bride-and-groom-photo.webp" alt="photo des mariés devant un palmier">
-                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/woman-portrait-photo.webp" alt="photo d'une femme à travers un grillage">
+                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.webp" alt="contre-plongée d'un concert depuis la fosse">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/businessman-photo.webp" alt="portrait d'un homme d'affaire">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/smiling-employees-photo.webp" alt="focus sur deux femmes en réunion">
+                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hands-of-bride-and-groom-photo.webp" alt="gros plan des mains des mariés">
+                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/man-portrait-photo.webp" alt="portrait d'un homme qui ferme les yeux">
+                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/bride-and-groom-photo.webp" alt="photo prise sur le vif des mariés qui rient devant un palmier">
+                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/woman-portrait-photo.webp" alt="vue d'une femme à travers un grillage">
                     <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-singer-photo.webp" alt="photo du chanteur lors d'un concert">
                     <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/woman-with-computer-photo.webp" alt="photo d'une femme qui travaille sur ordinateur et qui rit">
                 </div>
@@ -157,20 +157,20 @@
             <div class="quote">
                 <figure>
                     <blockquote>
-                        <h2 class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</h2>
+                        <p class="quote__text">Un portrait n’est pas une ressemblance. Dès lors qu’une émotion ou qu’un fait est traduit en photo, il cesse d’être un fait pour devenir une opinion. L’inexactitude n’existe pas en photographie. Toutes les photos sont exactes. Aucune d’elles n’est la vérité.</p>
                     </blockquote>
                     <figcaption class="quote__author">- Richard Avedon</figcaption>
                 </figure>
             </div>
-        </div>
+        </section>
 
-        <div id="services">
+        <section id="services">
             <h2 class="title">Mes services</h2>
             <div class="container">
                 <div class="service">
                     <div class="service__description">
                         <h3>Shooting photo</h3>
-                        <p>Pour capturer vos moments les plus précieux et garder un souvenir impérissable. Je me déplace en Île-de-France pour réaliser vos photos</p>
+                        <p>Anniversaire, naissance, mariage... je me déplace en Île-de-France pour capturer vos moments les plus précieux et les rendre éternels</p>
                     </div>
                     <div class="service__price">
                         <h4>350€/demi journée</h4>
@@ -180,8 +180,8 @@
 
                 <div class="service">
                     <div class="service__description">
-                        <h3>Retouches</h3>
-                        <p>Vous souhaitez retoucher vos photos pour un résultat professionnel ? Bénéficiez d’un rendu optimal pour vos publications</p>
+                        <h3>Retouches photo</h3>
+                        <p>Des retouches professionnelles, telles que l'application d'un filtre ou la suppression d'un élément, sublimeront vos photos et les rendront encore plus captivantes lorsque vous les partagerez sur les réseaux sociaux</p>
                     </div>
                     <div class="service__price">
                         <h4>50€/photo</h4>
@@ -192,7 +192,7 @@
                 <div class="service">
                     <div class="service__description">
                         <h3>Album photos</h3>
-                        <p>Partagez avec vos proches et vos clients les photos des moments passés ensemble à travers un album photo personnalisé</p>
+                        <p>Vous souhaitez des photos qui ne soient pas juste éphémères ? Imprimez-les et créez votre album personnalisé. À offrir ou à partager avec vos proches</p>
                     </div>
                     <div class="service__price">
                         <h4>400€ album A4</h4>
@@ -200,22 +200,22 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </section>
 
         <div class="quote">
             <figure>
                 <blockquote>
-                    <h2 class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</h2>
+                    <p class="quote__text">De manière inconsciente, je crois, je guette un regard, une expression, des traits ou une nostalgie capable de résumer ou plus exactement de révéler une vie</p>
                 </blockquote>
                 <figcaption class="quote__author">- Richard Avedon</figcaption>
             </figure>
         </div>
 
-        <div id="contact">
+        <section id="contact">
             <div class="container">
                 <div class="form-container">
-                    <h2>Une question ? Une demande de devis ?</h2>
-                    <p> N’hésitez pas à m’écrire ! Je réponds en moins de 24 heures</p>
+                    <h2>Une question ? Un devis ?</h2>
+                    <p> N’hésitez pas à m’écrire ! Je réponds dans les 24h</p>
                     <form action="#" method="post">
                         <label for="nom">Nom</label>
                         <input type="text" name="nom" id="nom">
@@ -231,6 +231,6 @@
                     <img src="./assets/images/camera-photo.webp" alt="photo d'un appareil photo">
                 </div>
             </div>
-        </div>
+        </section>
     </body>
 </html>
