Ajout des meta pour les réseaux sociaux

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="description" content="Photographe à Bordeaux et mobile en Île-de-France, je réalise shootings, retouches et albums photos afin d'immortaliser ce qui compte pour vous et vous permettre de revivre un moment, une émotion...">
 
+            <meta name="twitter:card" content="summary_large_image" />
+                <!-- <meta name="twitter:site" content="@skyminds"> -->
+                <meta name="twitter:title" content="Nina Carducci - Photographe">
+                <meta name="twitter:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
+                <meta name="twitter:image" content="./assets/images/nina-portrait-photo.webp">
+
+            <meta property="og:title" content="Nina Carducci - Photographe">
+                <meta property="og:type" content="article">
+                <meta property="og:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
+                <meta property="author" content="Nina Carducci">
+                <meta property="og:image" content="./assets/images/nina-portrait-photo.webp">
+
         <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
             <link rel="stylesheet" href="./assets/style.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,6 +32,7 @@
                     "@context": "https://schema.org",
                     "@type": "Person",
                     "name": "Nina Carducci",
+                    "description": "Photographe freelance à Bordeaux et en Île-de-France, je réponds au téléphone du lundi au vendredi de 10h à 19h",
                     "telephone": "05.56.67.78.89",
                     "address": {
                         "@type": "PostalAddress",
@@ -192,7 +205,7 @@
                 <div class="service">
                     <div class="service__description">
                         <h3>Album photos</h3>
-                        <p>Vous souhaitez des photos qui ne soient pas juste éphémères ? Imprimez-les et créez votre album personnalisé. À offrir ou à partager avec vos proches</p>
+                        <p>Vous souhaitez des photos qui ne restent pas éphémères ? Imprimez-les et créez votre album personnalisé. À offrir ou à partager avec vos proches</p>
                     </div>
                     <div class="service__price">
                         <h4>400€ album A4</h4>
