--- a/index.html
+++ b/index.html
@@ -5,25 +5,27 @@
             <meta name="viewport" content="width=device-width, initial-scale=1.0">
             <meta name="description" content="Photographe à Bordeaux et mobile en Île-de-France, je réalise shootings, retouches et albums photos afin d'immortaliser ce qui compte pour vous et vous permettre de revivre un moment, une émotion...">
 
+            <!-- TWITTER META -->
             <meta name="twitter:card" content="summary_large_image" />
                 <!-- <meta name="twitter:site" content="@skyminds"> -->
                 <meta name="twitter:title" content="Nina Carducci - Photographe">
                 <meta name="twitter:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
                 <meta name="twitter:image" content="./assets/images/nina-portrait-photo.webp">
 
+            <!-- FACEBOOK META -->
             <meta property="og:title" content="Nina Carducci - Photographe">
                 <meta property="og:type" content="article">
                 <meta property="og:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
                 <meta property="author" content="Nina Carducci">
                 <meta property="og:image" content="./assets/images/nina-portrait-photo.webp">
 
-        <link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
             <link rel="stylesheet" href="./assets/style.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
         
-        <script src="./assets/bootstrap/bootstrap.bundle.js"></script>
+        <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
             <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
             <script src="./assets/maugallery.js" async></script>
             <script src="./assets/scripts.js" async></script>
@@ -163,10 +165,12 @@
             </div>
         </div>
 
+        <div class="overlay"></div>
+
         <section id="gallery">
             <h2 class="title">Mon portfolio</h2>
             <div class="container py-3">
-                <div class="gallery" style="display: none">
+                <div class="gallery">
                     <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.webp" alt="contre-plongée d'un concert depuis la fosse">
                     <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/businessman-photo.webp" alt="portrait d'un homme d'affaire">
                     <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/smiling-employees-photo.webp" alt="focus sur deux femmes en réunion">
@@ -257,5 +261,6 @@
                 </div>
             </div>
         </section>
+        <!-- <script src="script.js"></script> -->
     </body>
 </html>
