--- a/index.html
+++ b/index.html
@@ -23,11 +23,6 @@
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
-        
-        <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
-            <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
-            <script src="./assets/maugallery.min.js" async></script>
-            <script src="./assets/scripts.min.js" async></script>
 
             <!-- RICH SNIPPETS -->
             <script type="application/ld+json">
@@ -129,7 +124,7 @@
         </header>
 
         <!-- CARROUSEL -->
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel" data-bs-interval="false">
             <div class="carousel-indicators">
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
                 <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
@@ -266,5 +261,10 @@
                 </div>
             </div>
         </section>
+
+        <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+        <script src="./assets/maugallery.min.js"></script>
+        <script src="./assets/scripts.min.js"></script>
     </body>
 </html>
