Ajout de l'attribut loading aux images

--- a/index.html
+++ b/index.html
@@ -132,13 +132,13 @@
             </div>
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches">
+                    <img src="./assets/images/slider/person-walking-photo.webp" class="d-block w-100" alt="Photo en plongée d'une personne en costume sur bandes noires et blanches" loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo en immersion du public à un festival">
+                    <img src="./assets/images/slider/festival-photo.webp" class="d-block w-100" alt="Photo en immersion du public à un festival" loading="lazy">
                 </div>
                 <div class="carousel-item">
-                    <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo du marié qui embrasse la mariée">
+                    <img src="./assets/images/slider/wedding-photo.webp" class="d-block w-100" alt="Photo du marié qui embrasse la mariée" loading="lazy">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -154,7 +154,7 @@
         <!-- ABOUT -->
         <div id="about">
             <div class="picture left">
-                <img src="./assets/images/nina-portrait-photo.webp" alt="portrait de Nina Carducci">
+                <img src="./assets/images/nina-portrait-photo.webp" alt="portrait de Nina Carducci" loading="lazy">
             </div>
             <div id="about-me">
                 <h2 class="about-me__title">La photographie et moi</h2>
@@ -169,15 +169,15 @@
             <h2 class="title">Mon portfolio</h2>
             <div class="container py-3">
                 <div class="gallery">
-                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.webp" alt="contre-plongée d'un concert depuis la fosse">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/businessman-photo.webp" alt="portrait d'un homme d'affaire">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/smiling-employees-photo.webp" alt="focus sur deux femmes en réunion">
-                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hands-of-bride-and-groom-photo.webp" alt="gros plan des mains des mariés">
-                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/man-portrait-photo.webp" alt="portrait d'un homme qui ferme les yeux">
-                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/bride-and-groom-photo.webp" alt="photo prise sur le vif des mariés qui rient devant un palmier">
-                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/woman-portrait-photo.webp" alt="vue d'une femme à travers un grillage">
-                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-singer-photo.webp" alt="photo du chanteur lors d'un concert">
-                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/woman-with-computer-photo.webp" alt="photo d'une femme qui travaille sur ordinateur et qui rit">
+                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-photo.webp" alt="contre-plongée d'un concert depuis la fosse" loading="lazy">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/businessman-photo.webp" alt="portrait d'un homme d'affaire" loading="lazy">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/smiling-employees-photo.webp" alt="focus sur deux femmes en réunion" loading="lazy">
+                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hands-of-bride-and-groom-photo.webp" alt="gros plan des mains des mariés" loading="lazy">
+                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/man-portrait-photo.webp" alt="portrait d'un homme qui ferme les yeux" loading="lazy">
+                    <img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/bride-and-groom-photo.webp" alt="photo prise sur le vif des mariés qui rient devant un palmier" loading="lazy">
+                    <img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/woman-portrait-photo.webp" alt="vue d'une femme à travers un grillage" loading="lazy">
+                    <img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/concert-singer-photo.webp" alt="photo du chanteur lors d'un concert" loading="lazy">
+                    <img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/woman-with-computer-photo.webp" alt="photo d'une femme qui travaille sur ordinateur et qui rit" loading="lazy">
                 </div>
             </div>
 
@@ -257,7 +257,7 @@
                 </div>
 
                 <div class="picture right">
-                    <img src="./assets/images/camera-photo.webp" alt="zoom sur un appareil photo">
+                    <img src="./assets/images/camera-photo.webp" alt="zoom sur un appareil photo" loading="lazy">
                 </div>
             </div>
         </section>
