Ajout du footer

--- a/index.html
+++ b/index.html
@@ -262,6 +262,21 @@
             </div>
         </section>
 
+        <footer>
+            <p>Tous droits réservés</p>
+            <div class="social-link--footer">
+                <a href="#">
+                    <img src="./assets/images/facebook.png" alt="icône facebook">
+                </a>
+                <a href="#">
+                    <img src="./assets/images/linkedin.png" alt="icône linkedin">
+                </a>
+                <a href="#">
+                    <img src="./assets/images/twitter.png" alt="icône twitter">
+                </a>
+            </div>
+        </footer>
+
         <script src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
         <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
         <script src="./assets/scripts.min.js"></script>
