Modification des images d'icônes

--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
                     <img src="./assets/images/linkedin.png" alt="icône linkedin">
                 </a>
                 <a href="#">
-                    <img src="./assets/images/twitter.png" alt="icône twitter">
+                    <img src="./assets/images/twitter.png" alt="icône twitter" class="icon--border">
                 </a>
             </div>
         </footer>
