--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
         <!-- TWITTER META -->
         <meta name="twitter:card" content="summary_large_image">
             <meta name="twitter:title" content="Nina Carducci - Photographe">
-            <meta name="twitter:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
+            <meta name="twitter:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos.">
             <meta name="twitter:image" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp">
 
         <!-- FACEBOOK META -->
         <meta property="og:title" content="Nina Carducci - Photographe">
             <meta property="og:type" content="website">
             <meta property="og:url" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/">
-            <meta property="og:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos. Vous me trouverez au 68 avenue Alsace-Lorraine, 33200 Bordeaux sinon je réponds au 05.56.67.78.89 du lundi au vendredi de 10h à 19h">
+            <meta property="og:description" content="Photographe freelance à Bordeaux et en Île-de-France, je réalise shootings, retouches et albums photos.">
             <meta property="og:image" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
