--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <meta property="og:image" content="https://jeanne4l.github.io/oc-nina-carducci-portfolio/assets/images/nina-portrait-photo.webp">
 
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-            <link rel="stylesheet" href="./assets/style.min.css">
+            <link rel="stylesheet" href="./assets/style.css">
             <link rel="preconnect" href="https://fonts.googleapis.com">
             <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
             <link href="https://fonts.googleapis.com/css2?family=Spectral:ital@1&display=swap" rel="stylesheet">
