Remplacement des h* par des p

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </div>
             <div id="about-me">
                 <h2 class="about-me__title">La photographie et moi</h2>
-                <h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestinée. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
+                <p class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestinée. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</p>
                 <p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
                 C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de la lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
             </div>
@@ -201,7 +201,7 @@
                         <p>Anniversaire, naissance, mariage... je me déplace en Île-de-France pour capturer vos moments les plus précieux et les rendre éternels</p>
                     </div>
                     <div class="service__price">
-                        <h4>350€/demi journée</h4>
+                        <p>350€/demi journée</p>
                         <span>Matériel, déplacement inclus</span>
                     </div>
                 </div>
@@ -212,7 +212,7 @@
                         <p>Des retouches professionnelles, telles que l'application d'un filtre ou la suppression d'un élément, sublimeront vos photos et les rendront encore plus captivantes lorsque vous les partagerez sur les réseaux sociaux</p>
                     </div>
                     <div class="service__price">
-                        <h4>50€/photo</h4>
+                        <p>50€/photo</p>
                         <span>2 AR par photo</span>
                     </div>
                 </div>
@@ -223,7 +223,7 @@
                         <p>Imprimer vos photos est un moyen sûr de les conserver dans le temps. Créez un album personnalisé à offrir ou à partager avec vos proches</p>
                     </div>
                     <div class="service__price">
-                        <h4>400€ album A4</h4>
+                        <p>400€ album A4</p>
                         <span>30 pages recto-verso</span>
                     </div>
                 </div>
